; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_task.c_pid_empty.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_task.c_pid_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pid = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pid*)* @pid_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pid_empty(%struct.pid* %0) #0 {
  %2 = alloca %struct.pid*, align 8
  store %struct.pid* %0, %struct.pid** %2, align 8
  %3 = load %struct.pid*, %struct.pid** %2, align 8
  %4 = getelementptr inbounds %struct.pid, %struct.pid* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.pid*, %struct.pid** %2, align 8
  %9 = getelementptr inbounds %struct.pid, %struct.pid* %8, i32 0, i32 1
  %10 = call i64 @list_empty(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load %struct.pid*, %struct.pid** %2, align 8
  %14 = getelementptr inbounds %struct.pid, %struct.pid* %13, i32 0, i32 0
  %15 = call i64 @list_empty(i32* %14)
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %12, %7, %1
  %18 = phi i1 [ false, %7 ], [ false, %1 ], [ %16, %12 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i64 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
